Fix receipt icon spacing

--- a/app/assets/stylesheets/controllers/user.scss
+++ b/app/assets/stylesheets/controllers/user.scss
@@ -273,10 +273,15 @@ div#receipts {
     div.receipt-actions-block {
       flex-basis: 5em;
       margin: 0.5em 0;
-    }
 
-    a {
-      margin: 0 0.25em;
+      & > svg {
+        margin: 0.25em;
+      }
+
+      & > a {
+        display: inline-block;
+        margin: 0;
+      }
     }
   }
 }
